[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/ColorTileMap.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/ColorMaze.gd" type="Script" id=2]
[ext_resource path="res://src/scenes/LineWalls.gd" type="Script" id=3]

[node name="ColorMaze" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorTileMap" type="Node2D" parent="."]
script = ExtResource( 1 )
tile_size = Vector2( 16, 16 )

[node name="LineWalls" type="Node2D" parent="."]
script = ExtResource( 3 )
tile_size = Vector2( 16, 16 )
